Добавил meta description на страницы

--- a/src/user/templates/creditRequestEditorStart.tpl.html
+++ b/src/user/templates/creditRequestEditorStart.tpl.html
@@ -1,4 +1,5 @@
 <? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Оформление заявки на кредит. Первые предложения уже в течении часа!');
     $partViewer->view('parts/header');
 
     $form->
