--- a/src/user/templates/userRegisterLogin.tpl.html
+++ b/src/user/templates/userRegisterLogin.tpl.html
@@ -1,4 +1,5 @@
 <? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Страница авторизации. Доступ к истории заявок и кредитных предложений');
     $partViewer->view('parts/header');
     
     $banMessage = "";
