--- a/src/user/templates/userRegisterRecovery.tpl.html
+++ b/src/user/templates/userRegisterRecovery.tpl.html
@@ -1,4 +1,5 @@
 <? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Восттановление доступа к личному кабинету, если Вы забыли пароль.');
     $partViewer->view('parts/header');
 
     $form->
