--- a/src/user/templates/userRegisterStart.tpl.html
+++ b/src/user/templates/userRegisterStart.tpl.html
@@ -1,4 +1,5 @@
 <? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Регистрация на портале. Из личного кабинета Вы можете просматривать историю запросов и полученных предложений.');
     $partViewer->view('parts/header');
 
     $form->
