--- a/src/user/templates/staticAbout.tpl.html
+++ b/src/user/templates/staticAbout.tpl.html
@@ -1,4 +1,7 @@
-<? $partViewer->view('parts/header'); ?>
+<? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('О нашем портале Финансовый Ресурс. Кто мы и почему обратившись к нам за кредитом Вы точно останетесь довольны');
+    $partViewer->view('parts/header'); 
+?>
 
 <main role="main" class="container flex-shrink-0">
     
