--- a/src/user/templates/staticContacts.tpl.html
+++ b/src/user/templates/staticContacts.tpl.html
@@ -1,4 +1,7 @@
-<? $partViewer->view('parts/header'); ?>
+<? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Если у Вас возникли вопросы - мы всегда готовы придти на помощь, наши контакты.');
+    $partViewer->view('parts/header');
+?>
 
 <main role="main" class="container flex-shrink-0">
     
