--- a/src/user/templates/staticPrivacyPolicy.tpl.html
+++ b/src/user/templates/staticPrivacyPolicy.tpl.html
@@ -1,4 +1,7 @@
-<? $partViewer->view('parts/header'); ?>
+<? 
+    Singleton::getInstance('HTMLMetaManager')->setDescription('Политика обработки персональных данных портала finresurs.online');
+    $partViewer->view('parts/header'); 
+?>
 
 <main role="main" class="container flex-shrink-0">
     
