Немного изменил страницу добавления запроса. Добавил пояснения

--- a/src/user/templates/creditRequestEditorStart.tpl.html
+++ b/src/user/templates/creditRequestEditorStart.tpl.html
@@ -16,7 +16,7 @@
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
     
-    <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2">
+    <div class="credit-request-form col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2">
     
     <h1 class="mb-5">Заявка на кредит</h1>
     
@@ -65,6 +65,12 @@
         </div>
     </form>
     
+    </div>
+    
+    <div class="col-12 col-xl-6 col-lg-8 offset-xl-3 offset-lg-2 text-muted mt-3">
+        <p>На данном шаге мы просим Вас <strong>указать и подтвердить номер телефона</strong>, что бы мы могли информировать Вас о поступивших предложениях.</p>
+        <p>На следующем шаге мы уточним у Вас <strong>требуемую сумму и информацию о залоге</strong>.</p>
+        <p>На этом все, заявка перейдет к нашим партнерами, а Вы <strong>получите предложения займа</strong>, из которых сможете выбрать подходящее.</p>
     </div>
     
 </main>
