Добавил тэг отслеживания Google

--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -87,4 +87,12 @@
     </main>
     <? } ?>
 
+<? if ($isAdded) { ?>
+<!-- Event snippet for Website traffic conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-1035212079/nnbxCMWu0soBEK-q0O0D'});
+</script>
+
+<? } ?>
+
 <? $partViewer->view('parts/footer'); ?>
