--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -88,11 +88,8 @@
     <? } ?>
 
 <? if ($isAdded) { ?>
-<!-- Event snippet for Website traffic conversion page -->
-<script>
-  gtag('event', 'conversion', {'send_to': 'AW-1035212079/nnbxCMWu0soBEK-q0O0D'});
-</script>
-
+    <!-- Event snippet for Website traffic conversion page -->
+    <script>gtag('event', 'conversion', {'send_to': 'AW-1035212079/nnbxCMWu0soBEK-q0O0D'});</script>
 <? } ?>
 
 <? $partViewer->view('parts/footer'); ?>
