--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -1,4 +1,10 @@
-<? $partViewer->view('parts/header'); ?>
+<? 
+    if (!defined('__LOCAL_DEBUG__') || __LOCAL_DEBUG__ == false && isset($isAdded) && $isAdded) {
+        Singleton::getInstance('HTMLMetaManager')->appendFooterJavaScript("gtag('event', 'conversion', {'send_to': 'AW-1035212079/nnbxCMWu0soBEK-q0O0D'});");
+    }
+    
+    $partViewer->view('parts/header'); 
+?>
 
     <? if ($hasCredit) { ?>
     <main role="main" class="container flex-shrink-0">  
@@ -86,10 +92,5 @@
         </div>        
     </main>
     <? } ?>
-
-<? if ($isAdded) { ?>
-    <!-- Event snippet for Website traffic conversion page -->
-    <script>gtag('event', 'conversion', {'send_to': 'AW-1035212079/nnbxCMWu0soBEK-q0O0D'});</script>
-<? } ?>
 
 <? $partViewer->view('parts/footer'); ?>
