--- a/src/admin/templates/main.tpl.html
+++ b/src/admin/templates/main.tpl.html
@@ -23,7 +23,7 @@
                         <thead>
                             <tr>
                                 <th scope="col" class="align-middle">Дата</th>
-                                <th scope="col" class="align-middle text-center">Информация о заявке</th>
+                                <th scope="col" class="align-middle text-center">Запрашиваемая сумма</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -33,7 +33,7 @@
                                 <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>" title="просмот запроса"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></a>
                             </td>
                             <td class="align-middle">
-                                <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>" title="просмот запроса"><?=htmlspecialchars($item->getType()->getShortName())?> / <?=htmlspecialchars($item->getCategory()->getName())?> / <?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></a>
+                                <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>" title="просмот запроса"><?=number_format($item->getSumm(), 0, '.', '&nbsp;').'&#8381;'?></a>
                             </td>
                         </tr>
                         <? 
