Изменил главный слайд

--- a/src/user/templates/main.tpl.html
+++ b/src/user/templates/main.tpl.html
@@ -9,8 +9,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                    <h1>Кредит под залог</h1>
-                    <h4>Поможем быстро получить займ под залог с минимальным пакетом документов</h4>
+                    <h1>Кредит под залог авто</h1>
+                    <h4>Поможем быстро получить займ под залог авто с минимальным пакетом документов</h4>
                     <p>Вашу заявку получат сразу несколько кредитных организаций, а Вы в самый короткий срок выберете самое выгодное предложение</p>
                     <a class="btn btn-slide btn-outline-warning d-block" href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" role="button">подать заявку</a>
                 </div>
