--- a/src/user/templates/main.scss
+++ b/src/user/templates/main.scss
@@ -3,66 +3,11 @@
 @font-face { font-family: 'Bender'; src: url('Bender-Light.eot'); src: local('Bender Light'), local('Bender-Light'), url('Bender-Light.eot?#iefix') format('embedded-opentype'), url('Bender-Light.woff2') format('woff2'), url('Bender-Light.woff') format('woff'), url('Bender-Light.ttf') format('truetype'); font-weight: 300; font-style: normal; }
 @font-face { font-family: 'Bender'; src: url('Bender-LightItalic.eot'); src: local('Bender Light Italic'), local('Bender-LightItalic'), url('Bender-LightItalic.eot?#iefix') format('embedded-opentype'), url('Bender-LightItalic.woff2') format('woff2'), url('Bender-LightItalic.woff') format('woff'), url('Bender-LightItalic.ttf') format('truetype'); font-weight: 300; font-style: italic; }
 @font-face { font-family: 'Bender'; src: url('Bender-Bold.eot'); src: local('Bender Bold'), local('Bender-Bold'), url('Bender-Bold.eot?#iefix') format('embedded-opentype'), url('Bender-Bold.woff2') format('woff2'), url('Bender-Bold.woff') format('woff'), url('Bender-Bold.ttf') format('truetype'); font-weight: bold; font-style: normal; }
-
-@font-face {
-    font-family: 'Bender';
-    src: url('Bender-BoldItalic.eot');
-    src: local('Bender Bold Italic'), local('Bender-BoldItalic'),
-        url('Bender-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('Bender-BoldItalic.woff2') format('woff2'),
-        url('Bender-BoldItalic.woff') format('woff'),
-        url('Bender-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Bender';
-    src: url('Bender-BlackItalic.eot');
-    src: local('Bender Black Italic'), local('Bender-BlackItalic'),
-        url('Bender-BlackItalic.eot?#iefix') format('embedded-opentype'),
-        url('Bender-BlackItalic.woff2') format('woff2'),
-        url('Bender-BlackItalic.woff') format('woff'),
-        url('Bender-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Bender';
-    src: url('Bender-Italic.eot');
-    src: local('Bender Italic'), local('Bender-Italic'),
-        url('Bender-Italic.eot?#iefix') format('embedded-opentype'),
-        url('Bender-Italic.woff2') format('woff2'),
-        url('Bender-Italic.woff') format('woff'),
-        url('Bender-Italic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Bender';
-    src: url('Bender.eot');
-    src: local('Bender'),
-        url('Bender.eot?#iefix') format('embedded-opentype'),
-        url('Bender.woff2') format('woff2'),
-        url('Bender.woff') format('woff'),
-        url('Bender.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Bender';
-    src: url('Bender-Black.eot');
-    src: local('Bender Black'), local('Bender-Black'),
-        url('Bender-Black.eot?#iefix') format('embedded-opentype'),
-        url('Bender-Black.woff2') format('woff2'),
-        url('Bender-Black.woff') format('woff'),
-        url('Bender-Black.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-}
+@font-face { font-family: 'Bender'; src: url('Bender-BoldItalic.eot'); src: local('Bender Bold Italic'), local('Bender-BoldItalic'), url('Bender-BoldItalic.eot?#iefix') format('embedded-opentype'), url('Bender-BoldItalic.woff2') format('woff2'), url('Bender-BoldItalic.woff') format('woff'), url('Bender-BoldItalic.ttf') format('truetype'); font-weight: bold; font-style: italic; }
+@font-face { font-family: 'Bender'; src: url('Bender-BlackItalic.eot'); src: local('Bender Black Italic'), local('Bender-BlackItalic'), url('Bender-BlackItalic.eot?#iefix') format('embedded-opentype'), url('Bender-BlackItalic.woff2') format('woff2'), url('Bender-BlackItalic.woff') format('woff'), url('Bender-BlackItalic.ttf') format('truetype'); font-weight: 900; font-style: italic; }
+@font-face { font-family: 'Bender'; src: url('Bender-Italic.eot'); src: local('Bender Italic'), local('Bender-Italic'), url('Bender-Italic.eot?#iefix') format('embedded-opentype'), url('Bender-Italic.woff2') format('woff2'), url('Bender-Italic.woff') format('woff'), url('Bender-Italic.ttf') format('truetype'); font-weight: normal; font-style: italic; }
+@font-face { font-family: 'Bender'; src: url('Bender.eot'); src: local('Bender'), url('Bender.eot?#iefix') format('embedded-opentype'), url('Bender.woff2') format('woff2'), url('Bender.woff') format('woff'), url('Bender.ttf') format('truetype'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'Bender'; src: url('Bender-Black.eot'); src: local('Bender Black'), local('Bender-Black'), url('Bender-Black.eot?#iefix') format('embedded-opentype'), url('Bender-Black.woff2') format('woff2'), url('Bender-Black.woff') format('woff'), url('Bender-Black.ttf') format('truetype'); font-weight: 900; font-style: normal; }
 
 html { 
     
@@ -101,19 +46,23 @@ html {
             
             .slide { 
                 
-                background: url(images/main_slide.jpg) no-repeat top center; 
+                background: url(images/main_slide_auto.jpg) no-repeat top center; 
                 background-size: cover;
-                color:#fff; 
                 font-size: 1.25rem; 
                 margin-bottom: 0!important; 
                 border-radius: 0; 
                 
+                p { text-shadow: 0px 0px 10px #fff; }
                 h1 { position:relative; color: #ffc000; font-size: 3.75rem; padding-bottom: 1.6875rem; }
                 h1:before { content:'';width: 95px;height: 1px;position: absolute;bottom: 0;left: 0;background: #ffc000; }
-                h4 { font-size: 1.875rem; margin-top: 2.6875rem; margin-bottom: 2.6875rem; }
+                h4 { font-size: 1.875rem; margin-top: 2.6875rem; margin-bottom: 2.6875rem; text-shadow: 0px 0px 10px #fff; }
 
-                .btn-slide {font-size:1.375rem;border-radius: 30px;min-width: 255px;padding: .72rem .72rem;margin-top: 3.0625rem;}
-                .btn-slide:hover{}
+                .btn-slide {font-size:1.375rem;border-radius: 30px;min-width: 255px;padding: .72rem .72rem;margin-top: 2rem; background-color: #ffc107; color: white; font-weight: 900; border: 5px solid #ffffff82; }
+                .btn-slide:hover{ color: #090909; }
+                
+                @include media-breakpoint-down(md) {
+                    p, h4 { color: white; text-shadow: 0px 0px 10px #000; }
+                }
                 
                 @include media-breakpoint-up(xl) {
                     
