--- a/src/user/templates/parts/footer.tpl.html
+++ b/src/user/templates/parts/footer.tpl.html
@@ -35,7 +35,7 @@
                 <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
                 <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                <!-- element will get class pswp__preloader--active when preloader is running -->
+                <!-- element will get class pswp__preloader- -active when preloader is running -->
                 <div class="pswp__preloader">
                     <div class="pswp__preloader__icn">
                       <div class="pswp__preloader__cut">
@@ -64,7 +64,42 @@
     </div>
 
 </div>
+    <!-- Bootstrap core CSS -->
+    <link href="/i/main.min.css" rel="stylesheet">
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+    <script src="/i/bootstrap.bundle.min.js"></script>  
+    
+    <script src="/i/jquery-ui.min.js"></script>    
+    <link rel="stylesheet" href="/i/jquery-ui.min.css" type="text/css" />
+    
+    <script src="/i/file-upload/vendor/jquery.ui.widget.js"></script>
+    <script src="/i/file-upload/jquery.iframe-transport.js"></script>
+    <script src="/i/file-upload/jquery.fileupload.js"></script>
+    
+    <script src="/i/photoswipe.min.js"></script> 
+    <script src="/i/photoswipe-ui-default.min.js"></script>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/css/bootstrap-select.min.css" integrity="sha256-l3FykDBm9+58ZcJJtzcFvWjBZNJO40HmvebhpHXEhC0=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/bootstrap-select.min.js" integrity="sha256-+o/X+QCcfTkES5MroTdNL5zrLNGb3i4dYdWPWuq6whY=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/i18n/defaults-ru_RU.min.js" integrity="sha256-IylVxjD4l0kmppHSTNv4H5aZdeG05YQNN8Mz/Z2jJFM=" crossorigin="anonymous"></script>
+    
+    <script src="/i/global.js"></script>
+    
+    <? foreach(Singleton::getInstance('HTMLMetaManager')->getStyleList() as $styleUrl) { ?>
+        <link rel="stylesheet" href="<?=$styleUrl?>" type="text/css" />
+    <? } ?>
+    
+    <? foreach(Singleton::getInstance('HTMLMetaManager')->getJavaScriptList() as $scriptUrl) { ?>
+        <? if (mb_stripos($scriptUrl, 'jquery-ajaxtransport-xdomainrequest') !== false) { ?>
+            <!--[if lt IE 10]>
+                <script src="<?=$scriptUrl?>"></script>
+            <![endif]-->
+        <? } else { ?>
+            <script src="<?=$scriptUrl?>"></script>
+        <? } ?>
+    <? } ?> 
+    <script src="/i/modernizr-webp.js"></script>
 <? if (!defined('__LOCAL_DEBUG__') || __LOCAL_DEBUG__ == false) { ?>
     <!-- Global site tag (gtag.js) - Google Ads: 1035212079 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1035212079"></script>
@@ -80,7 +115,7 @@
 <? } ?>
 
 <? if (Singleton::getInstance('HTMLMetaManager')->getFooterJavaScript()) { ?>
-<script type="text/javascript">
+<script>
 $(function () {
     <?=Singleton::getInstance('HTMLMetaManager')->getFooterJavaScript()?>
     
