--- a/src/user/templates/parts/header.tpl.html
+++ b/src/user/templates/parts/header.tpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="ru" class="h-100">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,41 +15,6 @@
     <? } ?>
     <title><?=Singleton::getInstance('HTMLMetaManager')->getTitle()?></title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/i/main.min.css" rel="stylesheet">
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-    <script src="/i/bootstrap.bundle.min.js"></script>  
-    
-    <script type="text/javascript" src="/i/jquery-ui.min.js"></script>    
-    <link rel="stylesheet" href="/i/jquery-ui.min.css" type="text/css" />
-    
-    <script type="text/javascript" src="/i/file-upload/vendor/jquery.ui.widget.js"></script>
-    <script type="text/javascript" src="/i/file-upload/jquery.iframe-transport.js"></script>
-    <script type="text/javascript" src="/i/file-upload/jquery.fileupload.js"></script>
-    
-    <script src="/i/photoswipe.min.js"></script> 
-    <script src="/i/photoswipe-ui-default.min.js"></script>
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/css/bootstrap-select.min.css" integrity="sha256-l3FykDBm9+58ZcJJtzcFvWjBZNJO40HmvebhpHXEhC0=" crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/bootstrap-select.min.js" integrity="sha256-+o/X+QCcfTkES5MroTdNL5zrLNGb3i4dYdWPWuq6whY=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/i18n/defaults-ru_RU.min.js" integrity="sha256-IylVxjD4l0kmppHSTNv4H5aZdeG05YQNN8Mz/Z2jJFM=" crossorigin="anonymous"></script>
-    
-    <script type="text/javascript" src="/i/global.js"></script>
-    
-    <? foreach(Singleton::getInstance('HTMLMetaManager')->getStyleList() as $styleUrl) { ?>
-        <link rel="stylesheet" href="<?=$styleUrl?>" type="text/css" />
-    <? } ?>
-    
-    <? foreach(Singleton::getInstance('HTMLMetaManager')->getJavaScriptList() as $scriptUrl) { ?>
-        <? if (mb_stripos($scriptUrl, 'jquery-ajaxtransport-xdomainrequest') !== false) { ?>
-            <!--[if lt IE 10]>
-                <script type="text/javascript" src="<?=$scriptUrl?>"></script>
-            <![endif]-->
-        <? } else { ?>
-            <script type="text/javascript" src="<?=$scriptUrl?>"></script>
-        <? } ?>
-    <? } ?> 
 </head>
 <body class="d-flex flex-column h-100">
     
