--- a/src/user/templates/userRegisterLogin.tpl.html
+++ b/src/user/templates/userRegisterLogin.tpl.html
@@ -21,6 +21,17 @@
         addCustomLabel('credentials', UserRegisterLoginCommand::ERROR_AUTH_ENABLED, 'для полноценного использования сайта необходимо включить поддержку <code>Cookie</code> в настройках Вашего браузера')->
         addCustomLabel('credentials', UserRegisterLoginCommand::ERROR_HAMMER, 'слишком много неудачных попыток авторизации, следующая попытка возможна через '.Constants::AUTH_DELAY.' '.RussianTextUtils::selectCaseForNumber(Constants::AUTH_DELAY, array('минуту', 'минуты', 'минут')))->
         addWrongLabel('response', 'защита от автоматических действий не пройдена');
+
+$key = GOOGLE_RECAPTCHA_OPEN;
+Singleton::getInstance('HTMLMetaManager')->appendFooterJavascript(<<<JS
+    grecaptcha.ready(function() {
+	if (document.getElementById('google-response')) {
+	    grecaptcha.execute('{$key}', {action: 'login'}).then(function(token) {
+		document.getElementById('google-response').value = token;
+	    });
+	}
+    });
+JS);
 ?>
 
 <!-- Begin page content -->
@@ -106,14 +117,6 @@
     </div>
     
 </main>
-    
-<script>
-grecaptcha.ready(function() {
-    grecaptcha.execute('<?=GOOGLE_RECAPTCHA_OPEN?>', {action: 'login'}).then(function(token) {
-        document.getElementById('google-response').value = token;
-    });
-});
-</script>
 
 <? $partViewer->view('parts/pageFooter'); ?>
 
