Добавил картинки WebP

--- a/src/user/templates/staticAbout.tpl.html
+++ b/src/user/templates/staticAbout.tpl.html
@@ -3,7 +3,7 @@
     $partViewer->view('parts/header'); 
 ?>
 
-<main role="main" class="container flex-shrink-0">
+<main class="container flex-shrink-0">
     
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -43,7 +43,7 @@
             <li>среди разнообразия условий залога и процентных ставок Вы можете выбрать наилучшие для себя</li>
         </ol>
             
-        <p>На нашем сайте Вы сможете оформить быстрые займы под залог с минимальным пакетом документов. Для этого:</li>
+        <p>На нашем сайте Вы сможете оформить быстрые займы под залог с минимальным пакетом документов. Для этого:</p>
 
         <ul>
             <li>размещаете заявку на кредит, указав персональные данные, необходимую сумму и срок, предмет залога;</li>
