--- a/src/user/templates/staticContacts.tpl.html
+++ b/src/user/templates/staticContacts.tpl.html
@@ -3,7 +3,7 @@
     $partViewer->view('parts/header');
 ?>
 
-<main role="main" class="container flex-shrink-0">
+<main class="container flex-shrink-0">
     
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -20,9 +20,9 @@
         
         <h3 class="my-5">По телефону: <a href="tel:+79263615939">+7 (926) 361-59-39</a></h3>
         
-        <h3 class="my-5">По почте: <a href="mailto:info@finresurs.online">info@finresurs.online<a></h3>
+        <h3 class="my-5">По почте: <a href="mailto:info@finresurs.online">info@finresurs.online</a></h3>
                     
-        <h3 class="my-5">На сайте: <a href="javascript:jivo_api.open()">в онлайн чате<a></h3>
+        <h3 class="my-5">На сайте: <a href="javascript:jivo_api.open()">в онлайн чате</a></h3>
     </div>
     
 </main>
