--- a/src/user/templates/staticPrivacyPolicy.tpl.html
+++ b/src/user/templates/staticPrivacyPolicy.tpl.html
@@ -3,7 +3,7 @@
     $partViewer->view('parts/header'); 
 ?>
 
-<main role="main" class="container flex-shrink-0">
+<main class="container flex-shrink-0">
     
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
