Добавил генерацию конфига, с константой - датой генерации CSS / JS файлов для сброса кэша сервера долгого

--- a/src/user/templates/parts/footer.tpl.html
+++ b/src/user/templates/parts/footer.tpl.html
@@ -65,29 +65,28 @@
 
 </div>
     <!-- Bootstrap core CSS -->
-    <link href="/i/main.min.css" rel="stylesheet">
+    <link href="/i/main.min.css?<?=ASSETS_HASH?>" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-    <script src="/i/bootstrap.bundle.min.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js?<?=ASSETS_HASH?>" crossorigin="anonymous"></script>
+    <script src="/i/bootstrap.bundle.min.js?<?=ASSETS_HASH?>"></script>
     
-    <script src="/i/jquery-ui.min.js"></script>    
-    <link rel="stylesheet" href="/i/jquery-ui.min.css" type="text/css" />
+    <script src="/i/jquery-ui.min.js?<?=ASSETS_HASH?>"></script>
+    <link rel="stylesheet" href="/i/jquery-ui.min.css?<?=ASSETS_HASH?>" type="text/css" />
+
+    <script src="/i/file-upload/jquery.iframe-transport.js?<?=ASSETS_HASH?>"></script>
+    <script src="/i/file-upload/jquery.fileupload.js?<?=ASSETS_HASH?>"></script>
     
-    <script src="/i/file-upload/vendor/jquery.ui.widget.js"></script>
-    <script src="/i/file-upload/jquery.iframe-transport.js"></script>
-    <script src="/i/file-upload/jquery.fileupload.js"></script>
-    
-    <script src="/i/photoswipe.min.js"></script> 
-    <script src="/i/photoswipe-ui-default.min.js"></script>
+    <script src="/i/photoswipe.min.js?<?=ASSETS_HASH?>"></script>
+    <script src="/i/photoswipe-ui-default.min.js?<?=ASSETS_HASH?>"></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/css/bootstrap-select.min.css" integrity="sha256-l3FykDBm9+58ZcJJtzcFvWjBZNJO40HmvebhpHXEhC0=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/bootstrap-select.min.js" integrity="sha256-+o/X+QCcfTkES5MroTdNL5zrLNGb3i4dYdWPWuq6whY=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/js/i18n/defaults-ru_RU.min.js" integrity="sha256-IylVxjD4l0kmppHSTNv4H5aZdeG05YQNN8Mz/Z2jJFM=" crossorigin="anonymous"></script>
     
-    <script src="/i/global.js"></script>
+    <script src="/i/global.js?<?=ASSETS_HASH?>"></script>
     
     <? foreach(Singleton::getInstance('HTMLMetaManager')->getStyleList() as $styleUrl) { ?>
-        <link rel="stylesheet" href="<?=$styleUrl?>" type="text/css" />
+        <link rel="stylesheet" href="<?=$styleUrl?>?<?=ASSETS_HASH?>" type="text/css" />
     <? } ?>
     
     <? foreach(Singleton::getInstance('HTMLMetaManager')->getJavaScriptList() as $scriptUrl) { ?>
@@ -96,10 +95,10 @@
                 <script src="<?=$scriptUrl?>"></script>
             <![endif]-->
         <? } else { ?>
-            <script src="<?=$scriptUrl?>"></script>
+            <script src="<?=$scriptUrl?>?<?=ASSETS_HASH?>"></script>
         <? } ?>
     <? } ?> 
-    <script src="/i/modernizr-webp.js"></script>
+    <script src="/i/modernizr-webp.js?<?=ASSETS_HASH?>"></script>
 <? if (!defined('__LOCAL_DEBUG__') || __LOCAL_DEBUG__ == false) { ?>
     <!-- Global site tag (gtag.js) - Google Ads: 1035212079 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1035212079"></script>
