--- a/src/user/templates/parts/footer.tpl.html
+++ b/src/user/templates/parts/footer.tpl.html
@@ -95,7 +95,7 @@
                 <script src="<?=$scriptUrl?>"></script>
             <![endif]-->
         <? } else { ?>
-            <script src="<?=$scriptUrl?>?<?=ASSETS_HASH?>"></script>
+            <script src="<?=$scriptUrl?>"></script>
         <? } ?>
     <? } ?> 
     <script src="/i/modernizr-webp.js?<?=ASSETS_HASH?>"></script>
