Поправил Title / Description

--- a/src/user/templates/staticAbout.tpl.html
+++ b/src/user/templates/staticAbout.tpl.html
@@ -1,5 +1,7 @@
 <? 
-    Singleton::getInstance('HTMLMetaManager')->setDescription('О нашем портале Финансовый Ресурс. Кто мы и почему обратившись к нам за кредитом Вы точно останетесь довольны');
+    Singleton::getInstance('HTMLMetaManager')->
+	setTitle('Информация о портале')->
+	setDescription('О нашем портале Финансовый Ресурс. Кто мы и почему обратившись к нам за кредитом Вы точно останетесь довольны');
     $partViewer->view('parts/header'); 
 ?>
 
