--- a/src/user/templates/staticPrivacyPolicy.tpl.html
+++ b/src/user/templates/staticPrivacyPolicy.tpl.html
@@ -1,5 +1,7 @@
 <? 
-    Singleton::getInstance('HTMLMetaManager')->setDescription('Политика обработки персональных данных портала finresurs.online');
+    Singleton::getInstance('HTMLMetaManager')->
+	setTitle('Политика обработки персональных данных')->
+	setDescription('Политика обработки персональных данных портала finresurs.online');
     $partViewer->view('parts/header'); 
 ?>
 
