--- a/src/user/templates/creditRequestEditorStart.tpl.html
+++ b/src/user/templates/creditRequestEditorStart.tpl.html
@@ -49,21 +49,24 @@ JS);
     
     <h1 class="mb-5">Заявка на кредит</h1>
     
-    <div id="alert-block" class="alert alert-danger" role="alert"<?=(!$process || !$form->getTextualErrors())?' style="display: none;"':''?>>
+    <div id="alert-block" class="alert alert-danger my-4" role="alert"<?=(!$process || !$form->getTextualErrors())?' style="display: none;"':''?>>
+	<h4>Ошибки при заполнении формы</h4>
+	<hr />
         <p class="mb-0" id="alert-block-content"><?=implode("<br />", $form->getTextualErrors())?></p>
     </div>
     
-    <form action="" method="POST" class="">
+    <form method="POST">
         <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" />
         <input type="hidden" name="response" value="" id="google-response" />
-        
+	<? if ($form->getValue('category') instanceof Category) { ?><input type="hidden" name="category" value="<?=$form->getValue('category')->getId()?>" /><? } ?>
+	
         <? if ($form->exists('phone')) { ?>
             <div class="form-group row">
                 <label for="phone" class="col-12 col-sm-2 col-form-label col-form-label-lg">Телефон</label>
                 <div class="col-12 col-sm-10 form-row align-items-center">
                     <div class="input-group">
                         <div class="input-group-prepend"><span class="input-group-text">+7</span></div>
-                        <input id="phone" class="form-control form-control-lg " name="phone" value="<?=$form->getSafeValue('phone')?>" type="phone">
+                        <input id="phone" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('phone') ? 'in' : '').'valid' : ''?>" name="phone" value="<?=$form->getSafeValue('phone')?>" type="text" autocomplete="off">
                         <div class="input-group-append">
                             <button type="button" id="code-button" class="btn btn-info btn-sm">отправить код</button>
                         </div>
@@ -74,14 +77,14 @@ JS);
             <div id="code-block" class="form-group row"<?=$process?'':' style="display: none;"'?>>
                 <label for="code" class="col-12 col-sm-2 col-form-label col-form-label-lg">Код SMS</label>
                 <div class="col-12 col-sm-auto">
-                    <input id="code" class="form-control form-control-lg" size="4" maxlen="4" name="code" value="<?=$process && !$form->getError('code') ? $form->getDisplayValue('code') : ''?>" type="number">
+                    <input id="code" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('code') ? 'in' : '').'valid' : ''?>" size="4" maxlen="4" name="code" value="<?=$process && !$form->getError('code') ? $form->getDisplayValue('code') : ''?>" type="number" autocomplete="off">
                 </div>
             </div>
 
             <div class="form-group row ">
                 <div class="col-12 col-sm-10 offset-sm-2">
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="accept" name="accept"<?=$process && $form->getValue('accept')?' checked="checked"':''?> />
+                        <input type="checkbox" class="form-check-input <?=$process ? 'is-'.($form->hasError('accept') ? 'in' : '').'valid' : ''?>" id="accept" name="accept"<?=$process && $form->getValue('accept')?' checked="checked"':''?> />
                         <label class="form-check-label" for="accept">принимаю </label> <a href="/static/privacy-policy.html" target="_blank">политику обработки персональных данных</a>
                     </div>
                 </div>
@@ -98,13 +101,20 @@ JS);
                 </div>
             <? } ?>        
         <? } ?>
+	
+	<? if ($form->getValue('category') instanceof Category) { ?>
+	    <div class="form-group row">
+		<label class="col-sm-2 col-form-label col-form-label-lg">Залог</label>
+		<label class="col-sm-10 col-form-label col-form-label-lg font-weight-bold"><?=htmlspecialchars($form->getValue('category')->getName())?></label>
+	    </div>
+	<? } ?>   	
         
         <div class="form-group row align-items-center">
             <label for="summ" class="col-12 col-sm-2 col-form-label col-form-label-lg">Сумма</label>
             <div class="col-12 col-sm-10 justify-content-between">
                 <div class="form-inline">
                     <div class="input-group">
-                        <input id="summ" class="form-control form-control-lg" name="summ" value="<?=$form->getDisplayValue('summ')?>" type="text">
+                        <input id="summ" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('summ') ? 'in' : '').'valid' : ''?>" name="summ" value="<?=$form->getDisplayValue('summ')?>" type="text" autocomplete="off">
                         <div class="input-group-append"><span class="input-group-text" id="minSummPrepend">&#8381;</span></div>
                     </div>
                 </div>
@@ -115,7 +125,7 @@ JS);
         <div id="name-row" class="form-group row align-items-center">
             <label id="name-title" for="name" class="col-sm-2 col-form-label col-form-label-lg">ФИО</label>
             <div class="col-sm-10">
-                <input id="name" class="form-control form-control-lg" name="name" value="<?=$form->getDisplayValue('name')?>" type="text">
+                <input id="name" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('name') ? 'in' : '').'valid' : ''?>" name="name" value="<?=$form->getDisplayValue('name')?>" type="text" autocomplete="off">
                 <small class="form-text text-muted" id="name-description">Укажите ФИО полностью как в паспорте</small>
             </div>
         </div>
@@ -124,7 +134,7 @@ JS);
             <label for="birthDate" class="col-12 col-sm-2 col-form-label col-form-label-lg">Дата рождения</label>
             <div class="col-12 col-sm-10 form-inline justify-content-between">
                 <div class="input-group">
-                    <input id="birthDate" class="form-control form-control-lg" name="birthDate" value="<?=$form->getDisplayValue('birthDate') instanceof Timestamp ? $form->getDisplayValue('birthDate')->toFormatString('d.m.Y') : ''?>" type="text">
+                    <input id="birthDate" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('birthDate') ? 'in' : '').'valid' : ''?>" name="birthDate" value="<?=$form->getDisplayValue('birthDate') instanceof Timestamp ? $form->getDisplayValue('birthDate')->toFormatString('d.m.Y') : ''?>" type="text" autocomplete="off">
                     <div class="input-group-append"><span class="input-group-text"><i class="far fa-calendar-alt"></i></span></div>
                 </div>
             </div>
@@ -133,7 +143,7 @@ JS);
         <div id="passport-row" class="form-group row align-items-center">
             <label for="passport" class="col-12 col-sm-2 col-form-label col-form-label-lg">Серия и номер паспорта</label>
             <div class="col-12 col-sm-10 form-inline justify-content-between">
-                <input id="passport" class="form-control form-control-lg" name="passport" value="<?=$form->getDisplayValue('passport')?>" type="text">
+                <input id="passport" class="form-control form-control-lg <?=$process ? 'is-'.($form->hasError('passport') ? 'in' : '').'valid' : ''?>" name="passport" value="<?=$form->getDisplayValue('passport')?>" type="text" autocomplete="off">
             </div>
         </div>
         
